fix: width of grid-column in _wrap

--- a/src/scss/components/_wrap.scss
+++ b/src/scss/components/_wrap.scss
@@ -7,7 +7,7 @@
     margin: 5% auto;
     background-color: #EFF3F9;
     border-radius: 14px;
-    grid-template: 100% /100px 1280px;
+    grid-template: 100% /100px 1180px;
     grid-template-areas: 'nav  main';
 }
 
